--- a/_config.yml
+++ b/_config.yml
@@ -8,35 +8,35 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Imad's Hommepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Imad Eddine Benaziza"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/imadbenaziza/imadbenaziza.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "../images/my-photo.jpg"
+  name             : "Imad Eddine Benaziza"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Algiers"
+  employer         : "ENSTTIC"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  linkedin         : "https://www.linkedin.com/in/imad-eddine-benaziza-0a04391a3/"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  medium            : "https://medium.com/@imadbnz17"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  github          : "https://github.com/imadbenaziza"
   researchgate     : # URL
 
   # Repositories and software development
