--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: "https://medium.com/@imadbnz17"
 
-  - title: "Talks"
+  #- title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  #- title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
+  #- title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+   # url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: "../files/my-resume (1).pdf"
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+   # url: /markdown/
