--- a/_config.yml
+++ b/_config.yml
@@ -22,28 +22,19 @@ repository               : "https://github.com/imadbenaziza/imadbenaziza.github.
 author:
   # Biographic information
   avatar           : "my-photo.jpg"
-  name             : "Imad Eddine Benaziza"
+  name: |
+   Imad Eddine
+   Benaziza
   pronouns         : # example: "she/her"  
   bio              : "A cloud enthusiast sharing his tech journey"
   location         : "Algiers"
   employer         : "ENSTTIC"
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
   linkedin         : "https://www.linkedin.com/in/imad-eddine-benaziza-0a04391a3/"
   medium            : "https://medium.com/@imadbnz17"
   github          : "https://github.com/imadbenaziza"
-
-  # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
-
-  # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  
-
+    
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
