--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ author:
   employer         : "ENSTTIC"
 
   # Academic websites
-  linkedin         : "https://www.linkedin.com/in/imad-eddine-benaziza-0a04391a3/"
+  linkedin         : "/imad-eddine-benaziza-0a04391a3/"
   medium            : "https://medium.com/@imadbnz17"
-  github          : "https://github.com/imadbenaziza"
+  github          : "imadbenaziza"
     
 
 # Site Settings
