updated Academic Website

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,4 +2,4 @@ main:
   - title: "Publications"
     url: "https://medium.com/@imadbnz17"
   - title: "CV"
-    url: "../files/my-resume (1).pdf"
+    url: "../files/sudparis-cv.pdf"
