updated home page

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "A cloud enthusiast sharing his tech journey"
   location         : "Paris, Île-de-France, France"
   employer         : "Télécom
- SudParis, Institut Mines-Télécom"
+ SudParis"
 
   # Academic websites
   linkedin         : "/imad-eddine-benaziza-0a04391a3/"
