--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,4 +2,4 @@ main:
   - title: "Publications"
     url: "https://medium.com/@imadbnz17"
   - title: "CV"
-    url: "../files/CV-Stage-Tsp.pdf"
+    url: "../files/CV-Stage-alternnace.pdf"
